<resources>
    <string name="app_name">My Application</string>
    <string name="PrimeiroParagrafo">Michael é um ladrão de banco profissional aposentado, que depois de fazer um trato com o FIB (paródia do FBI), voltou para a vida do crime.</string>
    <string name="SegundoParagrafo">Michael é um ex-assaltante de banco e criminoso conhecido, que fingiu sua morte para se aposentar e viver uma vida pacífica com sua família em Los Santos. No entanto, ele sofre com seu relacionamento doentio e logo é puxado de volta para sua vida criminosa, forçando-o a voltar aos velhos tempos. A história de Michael gira em torno de como seu estilo de vida aparentemente idílico e tranquilo é interrompido quando seus demônios do passado e erros moralmente comprometedores voltam para assombrá-lo. Ele é velho amigo de Trevor e no início da história, ele também se torna amigo de Franklin e se torna um mentor para ele. </string>
    <string name="scroll"></string>
    <string name="TerceiroParagrafo">Franklin, um jovem e sombrio agente de reintegração de posse que tem uma grande quantidade de experiência ao volante, mas nenhuma experiência real com o crime até que ele conhece Michael, enquanto ele estava fazendo suas reintegrações de posse.</string>
    <string name="QuartoParagrafo">Franklin, um jovem e sombrio agente de reintegração de posse que tem uma grande quantidade de experiência ao volante, mas nenhuma experiência real com o crime até que ele conhece Michael, enquanto ele estava fazendo suas reintegrações de posse. Após isso Franklin e Michael começaram a sair juntos e se tornaram melhores amigos, uma relação quase de pai e filho. Franklin conhece Trevor e os 3 juntos vão cometendo roubos.</string>
    <string name="QuintoParagrafo">Trevor é o canhão solto nesta história, e é também o melhor amigo de Michael a muito tempo, ele também é um psicopata cabeça quente.</string>
    <string name="SextoParagrafo">Trevor é um criminoso conhecido e ex-ladrão de banco com um passado complicado, que mais tarde fundou sua própria empresa, Trevor  Philips Enterprises, operando com tráfico de drogas e contrabando de armas no Blaine County. Ele é amigo de Ron Jakowski e Wade Hebert, que trabalham para sua empresa, bem como do melhor e mais antigo amigo de Michael, que ele acreditava estar morto por quase uma década depois que ele fingiu sua morte para se aposentar da vida criminosa. Trevor é conhecido por ter um comportamento geralmente imprudente e muito agressivo, mas ele também é muito leal e respeita profundamente todos aqueles próximos a ele. A história de Trevor se concentra em como suas ações têm consequências para ele e seus amigos, e para ele chegar a um acordo com as ações anteriores de Michael. Trevor mais tarde também torna-se amigo do terceiro protagonista, Franklin, tornando-se uma espécie de mentor para ele.</string>
</resources>