<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cenario"
    android:orientation="vertical"
    tools:context=".historia">


    <androidx.core.widget.NestedScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:contentDescription="@string/scroll">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="400dp"
                android:layout_height="200dp"
                app:srcCompat="@drawable/michael" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="397dp"
                android:layout_height="74dp"
                android:layout_margin="5dp"
                android:backgroundTint="#F3F3F3"
                android:fontFamily="@font/alata"
                android:text="@string/PrimeiroParagrafo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="#F3F3F3"
                android:fontFamily="@font/alata"
                android:text="@string/SegundoParagrafo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/franklin" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="#F3F3F3"
                android:fontFamily="@font/alata"
                android:text="@string/TerceiroParagrafo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="#F3F3F3"
                android:fontFamily="@font/alata"
                android:text="@string/QuartoParagrafo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="400dp"
                android:layout_height="300dp"
                app:srcCompat="@drawable/trevor" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="#F3F3F3"
                android:fontFamily="@font/alata"
                android:text="@string/QuintoParagrafo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="#F3F3F3"
                android:fontFamily="@font/alata"
                android:text="@string/SextoParagrafo"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFF"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</ScrollView>